@@ -4,8 +4,8 @@ import com.google.common.collect.Queues;
 import dev.ultreon.quantum.debug.profiler.Profiler;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import dev.ultreon.quantum.log.Logger;
+import dev.ultreon.quantum.log.LoggerFactory;
 
 import java.util.*;
 import java.util.concurrent.*;
@@ -166,7 +166,7 @@ public class PollingExecutorService implements ExecutorService {
     public <T> @NotNull List<Future<T>> invokeAll(Collection<? extends Callable<T>> tasks) {
         List<CompletableFuture<T>> futures = tasks.stream()
                 .map(this::submit)
-                .toList();
+                .collect(Collectors.toList());
         return futures.stream()
                 .map(CompletableFuture::join)
                 .map(CompletableFuture::completedFuture)
@@ -178,7 +178,7 @@ public class PollingExecutorService implements ExecutorService {
         long endTime = System.currentTimeMillis() + unit.toMillis(timeout);
         List<CompletableFuture<T>> futures = tasks.stream()
                 .map(this::submit)
-                .toList();
+                .collect(Collectors.toList());
         List<Future<T>> resultList = new ArrayList<>();
 
         for (CompletableFuture<T> future : futures) {
@@ -197,7 +197,7 @@ public class PollingExecutorService implements ExecutorService {
     public <T> @NotNull T invokeAny(Collection<? extends Callable<T>> tasks) throws InterruptedException, ExecutionException {
         var futures = tasks.stream()
                 .map(this::submit)
-                .toList();
+                .collect(Collectors.toList());
 
         try {
             return CompletableFuture.anyOf(futures.toArray(new CompletableFuture[0]))
@@ -215,7 +215,7 @@ public class PollingExecutorService implements ExecutorService {
         var endTime = System.currentTimeMillis() + unit.toMillis(timeout);
         var futures = tasks.stream()
                 .map(this::submit)
-                .toList();
+                .collect(Collectors.toList());
 
         try {
             var result = CompletableFuture.anyOf(futures.toArray(new CompletableFuture[0]))
@@ -246,7 +246,7 @@ public class PollingExecutorService implements ExecutorService {
     }
 
     private boolean isSameThread() {
-        return Thread.currentThread().threadId() == this.thread.threadId();
+        return Thread.currentThread().getId() == this.thread.getId();
     }
 
     public void poll() {
