@@ -7,9 +7,9 @@ import dev.ultreon.quantum.world.ServerWorld;
 import dev.ultreon.quantum.world.World;
 import dev.ultreon.quantum.world.gen.WorldGenFeature;
 import dev.ultreon.quantum.world.gen.noise.NoiseConfig;
+import dev.ultreon.quantum.world.rng.JavaRNG;
+import dev.ultreon.quantum.world.rng.RNG;
 import org.jetbrains.annotations.NotNull;
-
-import java.util.Random;
 
 import static dev.ultreon.quantum.world.World.CHUNK_HEIGHT;
 
@@ -17,7 +17,7 @@ public class CactiFeature extends WorldGenFeature {
     private final NoiseConfig noiseConfig;
     private final Block block;
     private final float threshold;
-    private final Random random = new Random();
+    private final RNG random = new JavaRNG();
     private final int minTrunkHeight;
     private final int maxTrunkHeight;
 
@@ -44,13 +44,13 @@ public class CactiFeature extends WorldGenFeature {
 
         if (this.random.nextFloat() < this.threshold) {
             if (WorldGenDebugContext.isActive()) {
-                System.out.println("[Start " + Thread.currentThread().threadId() + "] TreeFeature: " + x + ", " + z + ", " + height);
+                System.out.println("[Start " + Thread.currentThread().getId() + "] TreeFeature: " + x + ", " + z + ", " + height);
             }
 
             var trunkHeight = this.random.nextInt(this.minTrunkHeight, this.maxTrunkHeight);
             if (trunkHeight + height + 1 > CHUNK_HEIGHT) {
                 if (WorldGenDebugContext.isActive()) {
-                    System.out.println("[End " + Thread.currentThread().threadId() + "] TreeFeature: " + x + ", " + z + ", " + height);
+                    System.out.println("[End " + Thread.currentThread().getId() + "] TreeFeature: " + x + ", " + z + ", " + height);
                 }
                 return false;
             }
@@ -61,7 +61,7 @@ public class CactiFeature extends WorldGenFeature {
                     for (int zOffset = -1; zOffset <= 1; zOffset++) {
                         if (!chunk.get(x + xOffset, y, z + zOffset).isAir()){
                             if (WorldGenDebugContext.isActive()) {
-                                System.out.println("[End " + Thread.currentThread().threadId() + "] TreeFeature: " + x + ", " + z + ", " + height + " - Not enough space");
+                                System.out.println("[End " + Thread.currentThread().getId() + "] TreeFeature: " + x + ", " + z + ", " + height + " - Not enough space");
                             }
                             return false;
                         }
@@ -74,7 +74,7 @@ public class CactiFeature extends WorldGenFeature {
             }
 
             if (WorldGenDebugContext.isActive()) {
-                System.out.println("[End " + Thread.currentThread().threadId() + "] TreeFeature: " + x + ", " + z + ", " + height + " - Success");
+                System.out.println("[End " + Thread.currentThread().getId() + "] TreeFeature: " + x + ", " + z + ", " + height + " - Success");
             }
             return true;
         }
